# StateExplorer

./: COMPLETE_WORKFLOW_GUIDE.md  CONTRIBUTING.md  GRAPH_ANALYSIS_2025-12-18.md  INSTALLATION.md  LICENSE  MIGRATION_STATUS.md  PROJECT_STATUS.md  README.md  STRUCTURE.md  pyproject.toml
docs/: DOCUMENTATION_INDEX.md  MIGRATION_GUIDE.md  README.md
docs/architecture/: FINGERPRINTING_STRATEGY.md  FSM_VS_POM.md  RESILIENCE_PRINCIPLES.md
docs/guides/: GETTING_STARTED.md
docs/research/: MODEL_BASED_TESTING.md
examples/: README.md  simple_discovery.py
tests/: README.md  conftest.py  test_accessibility_capture.py  test_discovery_integration.py  test_state_matching.py
